--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -4,9 +4,9 @@
   align-items: center;
   padding: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0;
-  overflow: hidden;
+  overflow: auto;
 }
 .story-textarea {
   width: 90vw;
