--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -79,3 +79,20 @@
   font-size: 14px;
   text-align: center;
 }
+
+.signup-link {
+  text-align: center;
+  margin-top: 20px;
+  color: #666;
+  font-size: 14px;
+}
+
+.signup-link a {
+  color: #4a90e2;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.signup-link a:hover {
+  text-decoration: underline;
+}
